[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Magic Dreams.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Scenes/AdminPanelScene.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Misc/box.png" type="Texture" id=3]
[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.34902 )

[sub_resource type="DynamicFont" id=4]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0, 0.117, 0.13, 1 )
margin_right = 2560.0
margin_bottom = 1440.0
texture = ExtResource( 3 )
expand = true

[node name="CancelButton" type="Button" parent="."]
margin_left = 8.0
margin_top = 1360.0
margin_right = 293.0
margin_bottom = 1440.0
custom_colors/font_color = Color( 0.407843, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 320.0
margin_top = 64.0
margin_right = 1600.0
margin_bottom = 704.0
focus_mode = 2
custom_fonts/normal_font = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogsList" type="ItemList" parent="."]
margin_left = 72.0
margin_top = 64.0
margin_right = 312.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="item_selected" from="LogsList" to="." method="_on_LogsList_item_selected"]
